force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Supplemental_Rent_Utilization_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent_Utilization_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Supplemental Rent Utilization Rate</label>
    <referenceTo>leaseworks__Supplemental_Rent_Utilization_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>Supplemental_Rent_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>