force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Total_Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Maintenance_Reserve__c</fullName>
    <description>The Total MR amount for the assembly, calculated using the applicable supplemental rent rates with MR Cap adjustments. If the Actual Total MR amount has reached the maximum limit, the MR total amount will be 0.</description>
    <formula>leaseworks__Y_Hidden_MR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total MR amount for the assembly, calculated using the applicable supplemental rent rates with MR Cap adjustments. If the Actual Total MR amount has reached the maximum limit, the MR total amount will be 0.</inlineHelpText>
    <label>MR Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>