force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__TSN_At_Month_Start_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN_At_Month_Start_F__c</fullName>
    <description>Snapshot of TSN at the start of the month, before current TSN is added to the value</description>
    <formula>leaseworks__TSN_At_Month_Start__c</formula>
    <inlineHelpText>Snapshot of TSN at the start of the month, before current TSN is added to the value</inlineHelpText>
    <label>TSN At Month Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>