force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Utilization_Report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Report__c</fullName>
    <label>Utilization</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>UR_List_Items1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>