force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Adjustment_Factor_Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Adjustment_Factor_Lower_Limit__c</fullName>
    <label>Z_unused_2106 Adj Factor - Lower Limit</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>