force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Avg_Hours_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Avg_Hours_F__c</fullName>
    <formula>leaseworks__Constituent_Assembly__r.leaseworks__Average_Utilization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Avg Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>