force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_CheckPBH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_CheckPBH__c</fullName>
    <description>This internal field is used to store the escalation Type from Supplemental Rent during the Utilization creation.</description>
    <label>Escalation Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>