force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Effective_Rate__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <label>[OLD MR]_Effective Rate Before Prorate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>