force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Effective_Rate_Calculated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Effective_Rate_Calculated__c</fullName>
    <label>_Effective Rate Calculated</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>