force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_FH_String__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_FH_String__c</fullName>
    <label>_FH String</label>
    <length>40</length>
    <type>Text</type>
</CustomField>