force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_FHFC_Upper_Limit_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_FHFC_Upper_Limit_LLP__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <label>[OLD MR]_FHFC LLP Upper Limit</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>