force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Inactive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2103 {Inactive}</label>
    <type>Checkbox</type>
</CustomField>