force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Interpolation_Adj_Lower__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Interpolation_Adj_Lower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Interpolation Adj - Lower</label>
    <referenceTo>leaseworks__Derate_Adjustment__c</referenceTo>
    <relationshipLabel>Assembly Utilization</relationshipLabel>
    <relationshipName>Assembly_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>