force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Interpolation_Adj_Upper__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Interpolation_Adj_Upper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Interpolation Adj - Upper</label>
    <referenceTo>leaseworks__Derate_Adjustment__c</referenceTo>
    <relationshipLabel>Assembly Utilization (Y_Hidden Interpolation Adj - Upper)</relationshipLabel>
    <relationshipName>Assembly_Utilization1</relationshipName>
    <type>Lookup</type>
</CustomField>