force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Lease_id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Lease_id__c</fullName>
    <formula>CASESAFEID(leaseworks__Utilization_Report__r.leaseworks__Y_hidden_Lease__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Lease id</label>
    <type>Text</type>
</CustomField>