force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Next_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Next_Escalation_Date__c</fullName>
    <description>This is internal field to find when user escalation is happened. This field is updated when user entered escalation wil happen else it will remain blank on SR utilization records.</description>
    <label>_Next Escalation Date</label>
    <type>Date</type>
</CustomField>