force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Prorate_Line__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Prorate_Line__c</fullName>
    <formula>if(isBlank(leaseworks__Prorate_Line__c), leaseworks__Utilization_Report__r.leaseworks__Prorate__c , leaseworks__Prorate_Line__c)</formula>
    <label>_Prorate Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>