force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Rate_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Rate_Method__c</fullName>
    <description>The MR calculation will be performed based on the selected method. Select MAX to use the maximum of the Supplemental Rent Rates. Select SUM to use the sum of all the Supplemental Rent Rates. Select N/A if no multiple rates are involved.</description>
    <inlineHelpText>The MR calculation will be performed based on the selected method. Select MAX to use the maximum of the Supplemental Rent Rates. Select SUM to use the sum of all the Supplemental Rent Rates. Select N/A if no multiple rates are involved.</inlineHelpText>
    <label>_Rate Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAX</fullName>
                <default>true</default>
                <label>MAX</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>