force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Y_Hidden_Selected_Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Selected_Ratio_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is for Internal purposes, This field captures the ratio table selected by the user while Utilization creation from Utilization Studio</description>
    <inlineHelpText>For Internal Use only, Captures the User selected Ratio table from Utilization Studio</inlineHelpText>
    <label>_Selected Ratio Table</label>
    <referenceTo>leaseworks__Ratio_Table__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization (_Selected Ratio Table)</relationshipLabel>
    <relationshipName>Supplemental_Rent_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>