force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/validationRules/leaseworks__StatusRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StatusRule</fullName>
    <active>false</active>
    <description>Marked Inactive. Moved the validation in trigger code.</description>
    <errorConditionFormula>false /*AND( !$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c ,
!ISNEW() &amp;&amp; Text(PRIORVALUE(Status__c))==&#39;Approved&#39; 
)*/</errorConditionFormula>
    <errorMessage>You cannot modify an Assembly Utilization if Monthly Utilization is already approved.</errorMessage>
</ValidationRule>